ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quiz-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: quiz-client
            port:
              number: 80
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: quiz-server
            port:
              number: 8080
